description of recipes added in. updates to readme

--- a/recipes.html
+++ b/recipes.html
@@ -36,7 +36,7 @@
 				<li><p>Pets Furever used Rescue Group API to present the user all the dogs in their area that are in need of a loving home</p></li>
 				
 				<li class="uk-nav-header">Links</li>
-				<li class="uk-active"><ahref="index.html">| Home |</a></li>
+				<li class="uk-active"><a href="index.html">| Home |</a></li>
 				<li><a href="application.html">Adoption Application</a></li>
 				<li><a href="recipes.html">Pet Food Recipes</a></li>
 				
@@ -103,8 +103,8 @@
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Turkey with Brown Rice</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <h3 class="uk-card-title">Ground Turkey with Brown Rice</h3>
+                    <p>Perfect, easy one pot recipe!</p>
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
             <div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Ground Chicken with Veggies</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <p>A recipe for keeping your dog healthy and fit!</p>
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
             <div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Turkey and Veggies</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <p>Tried and true homemade recipe for easy eating and digestion.</p>
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
             <div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Chicken Layer Cake</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <p>Layer cake is a great recipe to get lots of nutrients in your dogs meal!</p>
                 </div>
             </div>
         </div>
@@ -163,7 +163,7 @@
             <div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Sirloin with Eggs and Vegetables</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <p>Cost effective, human grade dog food.</p>
                 </div>
             </div>
         </div>
