added functionality to clear out the local storage when submit is pressed.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                </div>
                <!-- SUBMIT BUTTON -->
                <div class="uk-margin" uk-margin>
-                  <a href="./Search.html" class="uk-button uk-button-default submit-search search-pets">Submit</a>
+                  <a href="./Search.html" class="uk-button uk-button-default submit-search">Submit</a>
                </div>
             </fieldset>
          </form>
