fixing white space

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <title>Pets Furever</title>
    </head>
    <body>
+     
 	<!-- NAVBAR/HEADER -->
    <header>
       <nav class="uk-navbar-container uk-navbar dark-background padding-20">
@@ -45,6 +46,8 @@
          </ul>
       </div>
    </div>
+ 
+   <div class="hero-image uk-background-cover">
       <!-- AT RISK DOGS -->
       <div class="uk-container dark-background padding-20 center-main-content">
          <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
@@ -127,6 +130,9 @@
             </fieldset>
          </form>
       </div>
+
+   </div>
+  
       <!-- JQUERY SCRIPT -->
       <script src="https://code.jquery.com/jquery-3.5.1.js"
          integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
