--- a/application.html
+++ b/application.html
@@ -20,8 +20,7 @@
             <div class="uk-navbar-center">
                 <h1>Pets Furever</h1>
             </div>
-            <div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About
-                    Us</a> </div>
+            <div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a> </div>
         </nav>
     </header>
 
