created functinality to use the second API. this displays facts about the dog breed selected

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="uk-container dark-background padding-20 center-main-content">
          <form>
             <fieldset class="uk-fieldset">
-               <legend class="uk-legend">Find a pet!</legend>
+               <legend class="uk-legend pet-card">Find a pet!</legend>
                <div class="uk-margin">
                   <select class="uk-select breed-select form-input-select">
                      <!-- GENERATED THROUGH AJAX RESPONSE -->
